--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emitter",
+  "name": "emitter-js",
   "version": "0.0.5",
   "description": "Bind an event to a `callback` function. Passing all will bind the callback to all events fired.",
   "main": "index.js",
